overlap z-index fix

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -94,6 +94,7 @@
   top: 0;
   transition: $trans-default background-color;
   width: 100%;
+  z-index: 9998;
 }
 
 .header__top.is-open .header__overlap {
