--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -11,7 +11,7 @@
     position: absolute;
     right: 0;
     top: 0;
-    z-index: 1;
+    z-index: 9999;
   }
 }
 
